welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:5: error: Missing closing brace `}' assumed here
      prendBiscuit()
      ^