welcome.lessons.welcome.methods.basics.Methods.scala.code
       var nbPas= 0
       var dejafait= 0
      def goAndGet() {
      prendBiscuit()
      
       while (dejafait != pas) { 
       	recule()
       dejafait= dejafait + 1 }
       
       poseBiscuit()
      
      
        for (i <- 1 to 7) {
            goAndGet();
            right();
            forward();
            left();
        }
